syntax = "proto3";
option go_package = "/customer/grpc_seller/proto.product";

message ProductData {
    int32 id = 1;
    int32 user_id = 2;
    string name = 3;
    int32 price = 4;
    int32 qty = 5;
    string desc = 6;
}
message ProductFilter {
    int32 id = 1;
}
service ProductService {
    rpc GetProductById(ProductFilter) returns(ProductData) {}
}