syntax = "proto3";
option go_package = "/customer/grpc_seller/proto.user";

message UserData {
    int32 id = 1;
    string name = 2;
    string email = 3;
    uint32 role = 4;
    string phone = 5;
    double latitude = 6;
    double longitude = 7;
}
message UserFilter {
  int32 id = 1;
}
service UserService {
    rpc GetUserById(UserFilter) returns(UserData) {}
}